# mnk

./: .clang-format  CMakeLists.txt  Makefile  build.sh  connect4_cli.cpp  readme.md  test.cpp  toolchain-mingw64.cmake
mnk/: game.hpp  grid.hpp  line.hpp  point.hpp
mnk/model/: game.hpp  grid.hpp  line.hpp  mnk.hpp  point.hpp  range_formatter.hpp
mnk/model/games/: connect_4.hpp  tic_tac_toe.hpp
src/: game.hpp  main.cpp  player.hpp
src/mnk/: board.hpp  game.hpp  play_filter.cpp  presets.hpp  result.hpp
src/mnk/display/: gui.cpp  gui.hpp
src/mnk/filters/: gravity.hpp  proximity.hpp
src/mnkg/: game.hpp  main.cpp
src/mnkg/control/: game.hpp  main.cpp  menu.hpp
src/mnkg/mnk/: action.hpp  builder.hpp  game.hpp  play_filter.hpp
src/mnkg/model/: game.hpp  main.cpp  player.hpp
src/mnkg/model/mcts/: ai.hpp  node.hpp  simple_benchmark.cpp  tree.hpp  worker.hpp
src/mnkg/model/mnk/: action.hpp  board.hpp  builder.hpp  game.hpp  play_filter.cpp  play_filter.hpp  result.hpp
src/mnkg/varia/: allocate_unique.hpp  fast_object_pool.hpp  grid.hpp  line.hpp  make_unique.hpp  object_pool_allocator.hpp  point.hpp  randomizable.hpp  repository.hpp  slab_memory.hpp
src/mnkg/view/: game.cpp  game.hpp  gui.cpp  gui.hpp
src/varia/: grid.hpp  line.hpp  point.hpp
